--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 
+
+{% load staticfiles %}
+
 <html>
 
 	<head>
@@ -15,6 +18,8 @@
 		</div>
 		<div>
 			<a href="/rango/about/">About</a><br />
+			<img src="{% static "images/rango.jpg" %}"
+				 alt="Picture of Rango" />
 		</div>
 	</body>
 
