--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,8 +8,11 @@
 		<title>Rango</title>
 
 		<div>
-		<img src="(% static "images/rangoiguana.jpg" %)" 
-		alt="Picture of Waffles the lizard" />
+
+		<h1> Rango says here is the about page</h1>
+			<a href="/rango/">Index</a><br/>
+			<img src="{% static "images/rangoiguana.jpg" %}" 
+			alt="Picture of Waffles the lizard" />
 		</div>
 
 	</head>	
@@ -21,7 +24,8 @@
 		</div>
 
 		<div>
-			<img src="{{MEDIA_URL}}cat.jpg" />
+			<img src="{{MEDIA_URL}}cat.jpg"
+			alt="Picture of cat" />
 		</div>
 
 	</body>
