--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -13,6 +13,7 @@
 	<body>
 		<h1>Rango says...</h1>
 		<div>hey there partner!</div>
+		<h2> Most Liked Categories: </h2>
 
 		<div>
 		{% if categories %}
@@ -27,6 +28,25 @@
 		</ul>
 		{% else %}
 			<strong>There are no categories present.</strong>
+		{% endif %}
+
+		</div>
+
+		<h2> Most Viewed Pages: </h2>
+
+		<div>
+		{% if pages %}
+		<ul>
+
+			{% for page in pages %}
+				<li>
+				<a href="{{ page.url }}">{{ page.title }}</a>
+				</li>
+				{% endfor %}
+
+		</ul>
+		{% else %}
+			<strong>No pages currently in category.</strong>
 		{% endif %}
 
 		</div>
