nearly finished chapter 7

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,6 +21,9 @@
 		The specified category does not exist!
 	{% endif %}
 	</div>
+	<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a><br />
+	<div>
 	<a href='/rango/'>Index</a><br />
+	</div>
 </body>
 </html>
