--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Rango</title>
-</head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
+<html>
+
+<head>
+	<title>Rango
+{% block title_block %}
+	{{ category.name }}
+{% endblock %}
+	</title>
+
+</head>
 <body>
 	<div>
-	{% if category %}	
-		<h1>{{ category.name }}</h1>
-		{% if pages %}
-			<ul>
-			{% for page in pages %}
-				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
-			{% endfor %}
-			</ul>
+		{% block body_block %}
+			{% if category %}	
+			<h1>{{ category.name }}</h1>
+
+			{% if pages %}
+				<ul>
+				{% for page in pages %}
+					<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+				{% endfor %}
+				</ul>
+			{% else %}
+				<strong>No pages currently in category.</strong>
+			{% endif %}
+			<a href="{% url 'add_page' category.slug %}">Add a Page</a>
 		{% else %}
-			<strong>No pages currently in category.</strong>
+			The specified category does not exist!
 		{% endif %}
-	{% else %}
-		The specified category does not exist!
-	{% endif %}
-	</div>
-	<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a><br />
-	<div>
-	<a href='/rango/'>Index</a><br />
+	{% endblock %}
 	</div>
 </body>
 </html>
