--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
+{% extends 'rango/base.html' %}
 
-	<body>
+{% block body_block %}
+
 			{% if category %}
 		<h1>Add a Page to {{ category.name }}</h1>
 		<div>
-			<form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-
+			<form id="page_form" method="post" action="{% url 'add_page' category.slug %}">
 				{% csrf_token %}
 				 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
@@ -27,5 +23,4 @@
 				<strong>A category by this name does not exist.</strong>
 				{% endif %}
 		</div>
-	</body>
-</html>
+{% endblock %}
