--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -15,7 +15,7 @@
 	<body>
 		<div>
 			{% block body_block %}
-			{% endblock %}
+			
 
 		</div>
 		<hr />
@@ -24,7 +24,9 @@
 				<li><a href="{% url 'add_category' %}">Add New Category</a></li>
 				<li><a href="{% url 'about' %}">About</a></li>
 				<li><a href="{% url 'index' %}">Index</a></li>
+				<li><a href="{% url 'register' %}">Sign Up</a></li>
 			</ul>
+			{% endblock %}
 		</div>
 		<div>
 			{% block sidebar_block %}
