--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -15,23 +15,32 @@
 	<body>
 		<div>
 			{% block body_block %}
-			
-
+			{% endblock %}
+		
 		</div>
 		<hr />
 		<div>
 			<ul>
+				{% if user.is_authenticated %}
+				<li><a href= "{% url 'restricted' %}">Restricted Page</a></li>
+				<li><a href="{% url 'logout' %}">Logout</a></li>
 				<li><a href="{% url 'add_category' %}">Add New Category</a></li>
+				{% else %}
+				<li><a href="{% url 'login' %}">Login</a></li>
+				<li><a href="{% url 'register' %}">Sign Up</a></li>
+				{% endif %}
 				<li><a href="{% url 'about' %}">About</a></li>
 				<li><a href="{% url 'index' %}">Index</a></li>
-				<li><a href="{% url 'register' %}">Sign Up</a></li>
+				
 			</ul>
-			{% endblock %}
 		</div>
+			
 		<div>
-			{% block sidebar_block %}
-				{% get_category_list category%}
+
+				{% block sidebar_block %}
+				{% get_category_list category %}
 			{% endblock %}
 		</div>
+
 	</body>
 </html>
